# Root-Chess

./: README.md  build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .depend  CMakeLists.txt  Makefile  movegen.h  native-lib.cpp  ucioption.h
app/src/main/cpp/nnue/: nnue_common.h
app/src/main/java/com/example/chess/: ChessApplication.kt  MainActivity.kt
app/src/main/java/com/example/chess/data/: StockfishEngine.kt
app/src/main/java/com/example/chess/data/model/: AILevel.kt  AnalysisResult.kt  Board.kt  ChessPiece.kt  Color.kt  GameMode.kt  GameStatus.kt  Move.kt  Player.kt  PlayerType.kt  Position.kt  SanMovePair.kt  Spot.kt
app/src/main/java/com/example/chess/data/repository/: GamePlay.kt
app/src/main/java/com/example/chess/di/: AppModule.kt
app/src/main/java/com/example/chess/navigation/: ChessNavigationGraph.kt
app/src/main/java/com/example/chess/presentation/: AnalysisScreen.kt  BoardAnalysisScreen.kt  BoardScreen.kt  ChessGameViewModel.kt  HomeScreen.kt  OtherScreen.kt  SelectColorScreen.kt  SelectLevelScreen.kt
app/src/main/java/com/example/chess/ui/theme/: Theme.kt
app/src/main/res/drawable/: baseline_fullscreen_exit_24.xml  baseline_redo_24.xml  baseline_restart_alt_24.xml  baseline_undo_24.xml  best_move.xml  bishop_dark.xml  bishop_white.xml  blunder_move.xml  brilliant_move.xml  ic_player.xml  king_dark.xml  king_white.xml  knight_dark.xml  knight_white.xml  mistake_move.xml  move_inaccurate.xml  pawn_dark.xml  pawn_white.xml  queen_white.xml  rook_dark.xml
app/src/main/res/raw/: computer_bot.lottie  computer_knight.lottie  knight_piece.lottie
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
